--- a/core/core.qrc
+++ b/core/core.qrc
@@ -3,5 +3,7 @@
         <file alias="gpl-3.0.txt">gpl-3.0.txt</file>
 		<file alias="lgpl-3.0.txt">lgpl-3.0.txt</file>
 		<file alias="mit.txt">mit.txt</file>
+		<file alias="MinGW-w64.txt">MinGW-w64.txt</file>
+		<file alias="gpl-3.0_runtime_exception.txt">gpl-3.0_runtime_exception.txt</file>
     </qresource>
 </RCC>
